--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Greatify.Me</title>
   </head>
   <body>
-    <div id='root'></div>
+    <div id='root'><span>I'm alive!</span></div>
     <link rel="stylesheet" type="text/css" href="/dist/semantic.min.css">
     <script src="/dist/semantic.min.js"></script>
     <script src="/static/bundle.js"></script>
