--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>Greatify.Me</title>
   </head>
   <body>
-    <div id='root'><span>I'm alive!</span></div>
-    <link rel="stylesheet" type="text/css" href="/dist/semantic.min.css">
-    <script src="/dist/semantic.min.js"></script>
+    <div id='root'><span>I'm alive!</span><button class="ui button">Not Easy</button></div>
+    <link rel="stylesheet" type="text/css" href="/static/semantic.min.css">
+    <script src="/static/semantic.min.js"></script>
     <script src="/static/bundle.js"></script>
   </body>
 </html>
