12262015 Koa Server Serving Greatify.Me

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Greatify.Me</title>
   </head>
   <body>
-    <div id='root'><span>I'm alive!</span><button class="ui button">Not Easy</button></div>
+    <div id='root'><span>I'm alive!</span><button class="ui button">Easy</button></div>
     <link rel="stylesheet" type="text/css" href="/static/semantic.min.css">
     <script src="/static/semantic.min.js"></script>
     <script src="/static/bundle.js"></script>
