--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
   <head>
     <title>Greatify.Me</title>
   </head>
-  <style type="text/css">
-    .header {
-      background-color: black;
-      height: 85%;
-    }
-  </style>
   <body>
     <div id='root'><span>I'm alive!</span><button class="ui button">Easy</button></div>
+	<style type="text/css">
+		.header {
+		  background-color: black;
+		  height: 85%;
+		}
+	</style>
     <link rel="stylesheet" type="text/css" href="/dist/semantic.min.css">
     <script src="/dist/semantic.min.js"></script>
     <script src="/dist/bundle.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
   </body>
 </html>
