--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Greatify.Me</title>
+    <title>Time</title>
   </head>
   <body>
     <div id='root'><span>I'm alive!</span><button class="ui button">Easy</button></div>
