--- a/index.html
+++ b/index.html
@@ -5,15 +5,23 @@
   </head>
   <body>
     <div id='root'><span>I'm alive!</span><button class="ui button">Easy</button></div>
-	<style type="text/css">
+  <style type="text/css">
 		.header {
 		  background-color: black;
 		  height: 85%;
 		}
+    .nwa-wrap {
+      width:180px;
+      height:330px;
+      position: fixed;
+      top: 1em;
+      right: 1em;
+    }
 	</style>
     <link rel="stylesheet" type="text/css" href="/dist/semantic.min.css">
     <script src="/dist/semantic.min.js"></script>
     <script src="/dist/bundle.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
   </body>
 </html>
