Removing Aframe import, which disables overflow.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <body>
     <div id='root'><span>I'm alive!</span><button class="ui button">Easy</button></div>
   <style type="text/css">
-		.header {
+    .body {
+      overflow: auto;
+    }
+    .header {
 		  background-color: black;
 		  height: 85%;
 		}
